--- a/src/components/homepage/style.css
+++ b/src/components/homepage/style.css
@@ -2,6 +2,7 @@
   margin-left: 16px;
   margin-right: 16px;
   margin-top: 16px;
+  padding-bottom: 16px;
   display: grid;
   justify-content: center;
   text-align: center;
